# katas

./: README.md
clang-tools/clang-tidy-testing/: description.md  hungarian_notation_class.cpp  hungarian_notation_class.hpp  loops.cpp  override.cpp
clang-tools/sanitize/: instructions.txt
clang-tools/sanitize/asan/: bug.cpp
clang-tools/sanitize/msan/: bug.cpp
clang-tools/sanitize/tsan/: bug.cpp
mice/: CMakeLists.txt  assign_mice.hpp  assign_mice_tests.cpp  conanfile.txt  description.md
strong_typing/: CMakeLists.txt  description.md  distances.hpp  distances_tests.cpp
unique_paths_in_grid/: CMakeLists.txt  description.md  unique_paths_tests.cpp
